// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Commands npm logout should logout a user from all registries and all scopes when the -A,--all flag is used 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "➤ · Successfully logged out from all npm registries
",
}
`;

exports[`Commands npm logout should logout a user from the default registry when no arguments are passed 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "➤ · Successfully logged out from http://yarn.test.registry
",
}
`;

exports[`Commands npm logout should logout a user from the publish registry when the --publish flag is used 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "➤ · Successfully logged out from https://npm.pkg.github.com
",
}
`;

exports[`Commands npm logout should logout a user from the scope registry when the -s,--scope flag is used 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "➤ · Successfully logged out from scope first
",
}
`;
